src/readtheorg/css/readtheorg.css
/* ... */
#content .admonition-title.warning,
#content .admonition-title.caution,
#content .admonition-title.attention {
    line-height: 1;
    background: #f0b37e;
}

#content .admonition-title.error,
#content .admonition-title.danger {
    line-height: 1;
    background: #f29f97;
}

legend {
    display: block;
    width: 100%;
    border: 0;
    padding: 0;
    white-space: normal;
    margin-bottom: 24px;
    font-size: 150%;
    *margin-left: -7px;
}

label {
    display: block;
    margin: 0 0 0.3125em 0;
    color: #333;
    font-size: 90%;
}

a {
    color: #2980b9;
    border-bottom: 1px solid rgb(41 128 185 / 35%);
    cursor: pointer;
    text-decoration: none;
}

a:hover,
a:focus {
    color: #3091d1;
    border-bottom-color: #3091d1;
}

a:visited {
    color: #9b59b6;
    border-bottom-color: #9b59b6;
}

.left {
    text-align: left;
}

.center {
    text-align: center;
}

.right {
    text-align: right;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #e1e4e5;
    margin: 24px 0;
    padding: 0;
}

#table-of-contents li {
    list-style: none;
    margin-left: 0;
}

#table-of-contents header {
    height: 32px;
    display: inline-block;
    line-height: 32px;
    padding: 0 1.618em;
    display: block;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 80%;
    color: #2980b9;
    white-space: nowrap;
}

#table-of-contents ul {
    margin-bottom: 0;
}

#table-of-contents li.divide-top {
    border-top: solid 1px #404040;
}

#table-of-contents li.divide-bottom {
    border-bottom: solid 1px #404040;
}

#table-of-contents li.current {
    background: #e3e3e3;
}

#table-of-contents li.current a {
    color: gray;
    border-right: solid 1px #c9c9c9;
    padding: 0.4045em 2.427em;
}

#table-of-contents li.current a:hover {
    background: #d6d6d6;
}

#table-of-contents li a {
    /* color:#404040; */
    padding: 0.4045em 1.618em;
    position: relative;
    /* background:#fcfcfc; */
    border: none;
    /* border-bottom:solid 1px #c9c9c9; */
    /* border-top:solid 1px #c9c9c9; */
    padding-left: 1.618em -4px;
}

#table-of-contents li.on a:hover,
#table-of-contents li.current > a:hover {
    background: #fcfcfc;
}

#table-of-contents li ul li a {
    /* background:#c9c9c9; */
    padding: 0.4045em 2.427em;
}

#table-of-contents li ul li ul li a {
    padding: 0.4045em 3.236em;
}

#table-of-contents li.current ul {
    display: block;
}

/* #table-of-contents li ul{ */
/*     margin-bottom:0; */
/*     display:none} */

#table-of-contents .local-toc li ul {
    display: block;
}

#table-of-contents li ul li a {
    margin-bottom: 0;
    color: #b3b3b3;
    font-weight: normal;
}

#table-of-contents a {
    display: inline-block;
    line-height: 18px;
    padding: 0.4045em 1.618em;
    display: block;
    position: relative;
    font-size: 90%;
    color: #b3b3b3;
    direction: ltr;
}

#table-of-contents a:hover {
    color: #ffffff !important;
    background-color: #4e4a4a;
    cursor: pointer;
}

/* #text-table-of-contents { */
/*     overflow:scroll; */
/* } */

#table-of-contents {
    position: fixed;
    top: 0;
    left: 0;
    width: 300px;
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100%;
    background: #343131;
    z-index: 200;
    scrollbar-base-color: #1f1d1d;
    scrollbar-arrow-color: #b3b3b3;
    scrollbar-shadow-color: #1f1d1d;
    scrollbar-track-color: #343131;
}

#table-of-contents h2 {
    z-index: 200;
    background-color: #2980b9;
    text-align: center;
    padding: 0.809em;
    display: block;
    color: #fcfcfc;
    font-size: 100%;
    margin-bottom: 0.809em;
}

ul.nav > li ul {
    display: none;
}

li.active {
    background-color: #e3e3e3;
}

li.active > a {
    color: black !important;
}

ul.nav > li.active a {
    color: #404040 !important;
}

ul.nav > li.active li.active {
    background-color: #c9c9c9;
}

ul.nav > li.active li.active > a {
    color: black !important;
    border-right: solid 1px #c9c9c9 !important;
    font-weight: bold !important;
    display: block !important;
}

ul.nav > li.active > a {
    background-color: #fcfcfc;
    color: #55a5d9 !important;
    border-bottom: solid 1px #c9c9c9 !important; /* XXX Restrict it to 2nd level */
    border-right: solid 1px #c9c9c9 !important;
    font-weight: bold !important;
    display: block !important;
}

li.active > ul {
    display: inline !important;
}
/* ... */

